objects/CMPL123QMS__Mitigated_Harm_Calculation__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Harm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Harm</label>
        <referenceTo>CMPL123QMS__Harm__c</referenceTo>
        <relationshipLabel>Mitigated Harm Calculations</relationshipLabel>
        <relationshipName>Mitigated_Harm_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Mitigation_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mitigation Option</label>
        <referenceTo>CMPL123QMS__Mitigation_Option__c</referenceTo>
        <relationshipLabel>Mitigated Harm Calculations</relationshipLabel>
        <relationshipName>Mitigated_Harm_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__PCT_Reduction__c</fullName>
        <formula>(( CMPL123QMS__Harm__r.CMPL123QMS__Risk_Score__c -  CMPL123QMS__Risk_Score__c )/ CMPL123QMS__Harm__r.CMPL123QMS__Risk_Score__c )*100</formula>
        <label>PCT Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__PoH_Score__c</fullName>
        <formula>CMPL123QMS__Mitigation_Option__r.CMPL123QMS__Mitigated_P1_Score__c * CMPL123QMS__Harm__r.CMPL123QMS__P2_Score__c</formula>
        <label>PoH Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Risk_Score__c</fullName>
        <formula>CMPL123QMS__PoH_Score__c *  CMPL123QMS__Harm__r.CMPL123QMS__Harm_Code__r.CMPL123QMS__SoH_Score__c</formula>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Mitigated Harm Calculation</label>
    <nameField>
        <displayFormat>MITH-{00000}</displayFormat>
        <label>Mitigated Harm Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mitigated Harm Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>